# federate.ai

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py  uninstall.ps1  uninstall.sh  update.ps1  update.sh
.github/workflows/: release.yml
go/: go.mod  go.sum
go/cmd/bridge/: main.go
go/cmd/embed/: main.go
go/cmd/search/: main.go
scripts/: build_go.sh
src/federate/: __init__.py  __main__.py  agent.py  app.py  audio_handler.py  commands.py  execution.py  orchestration.py  semantic_search.py  subagents.py  telegram_handler.py  textIDE.py  toolbox.py
src/federate/styles/: style.css
src/meerkat/: __init__.py  __main__.py  agent.py  app.py  audio_handler.py  commands.py  orchestration.py  semantic_search.py  subagents.py  textIDE.py  toolbox.py
tests/: test_lc.py  test_model.py  test_qwen.py  test_run_timeout.py  test_timeout.py  test_tools.py
