[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federate"
version = "1.0.0"
description = "A cross-platform terminal based p2p agent orchestration harness and universal automation system"
readme = "README.md"
license = {text = "Apache Software License"}
requires-python = ">=3.11"
authors = [
    {name = "ROCK-LAB-PRIVATE-LIMITED", email = "arkadeep_ghosh@rocklab.in"},
]
keywords = ["ai", "agent", "tui", "coding", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering:: Artificial Intelligence",
]

dependencies = [
    "requests==2.34.2",
    "textual==8.2.7",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langgraph>=1.1.10",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-prebuilt>=1.0.13",
    "langgraph-sdk>=0.3.15",
    "langsmith>=0.7.22",
    "rich==15.0.0",
    "markdownify==1.2.2",
    "markdown==3.10.2",
    "tiktoken",
    "beautifulsoup4==4.15.0",
    "fake-useragent==2.2.0",
    "numpy==2.4.6",
    "pydantic==2.13.4",
    "keyring",
    "python-dotenv",
    "pylatexenc==2.10",  # Compulsory LaTeX parser for mathematical unicode rendering
    "pyperclip==1.11.0",   # Compulsory clipboard support for IDE copies/cuts
    "curl-cffi==0.15.0",   # Compulsory HTTP client with impersonation support (Cloudflare bypass)
    "pypdfium2"
    # Platform-specific hard dependencies
    "pywinpty; platform_system == 'Windows'",
]

[project.optional-dependencies]
# Audio / speech (optional — gracefully handled via ImportError)
audio = [
    "sounddevice",
    "kokoro-onnx",
    "sherpa-onnx",
]
# Autonomous Visual Computer Use / Computer Vision (optional)
vision = [
    "pyautogui",
    "pillow",
]
# PDF report generation for Deep Research (optional)
pdf = [
    "weasyprint",
    "pypdf"
]
# Telegram bot integration
telegram = []
# Browser-based UI serving
ide = [
    "tree-sitter",
    "tree-sitter-languages",
]
# All optional extras
all = [
    "federate[audio,ide,vision,pdf]",
]

[project.scripts]
federate = "federate.app:main"
fedide = "federate.textIDE:main"

[project.urls]
Homepage = "https://github.com/ROCK-LAB-PRIVATE-LIMITED/federate.ai"
Repository = "https://github.com/ROCK-LAB-PRIVATE-LIMITED/federate.ai"
Issues = "https://github.com/ROCK-LAB-PRIVATE-LIMITED/federate.ai/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
federate = ["bin/*", "styles/*", "styles/fonts/*"]
